@@ -1,0 +1,62 @@
+﻿########################################################
+# pornoxo VideoPortal
+########################################################
+start=http://www.pornoxo.com
+catcher=pornoxo.com
+########################################################
+# Videos
+########################################################
+item_infos=<div class="videospot"><div class="thumb"><a href="(/videos/[^"]+)".+?img src="([^"]+)" alt="([^"]+)".+?viddata">([^<]+)<
+item_order=url|icon|title|title.append
+item_info_name=title.append
+item_info_build= (%s)
+item_info_name=type
+item_info_build=video
+item_url_build=http://www.pornoxo.com%s
+########################################################
+# Categories
+########################################################
+item_infos=<div class="channelspot">.+?href="([^"]+)".+?img src="([^"]+)" alt="(.+?) Porn Tube
+item_order=url|icon|title
+item_skill=rss
+item_info_name=title
+item_info_build=video.devil.locale|30100
+item_url_build=http://www.pornoxo.com%s
+########################################################
+# Sorting
+########################################################
+item_infos=<a  href="([^"]+)">(Date Added|Most Popular|Top Rated|Longest)</a>
+item_order=url|title
+item_skill=directory
+item_curr=<a class="textactive" href="[^"]+">(Date Added|Most Popular|Top Rated|Longest)</a>
+item_info_name=title
+item_info_build=video.devil.locale|30109
+item_info_name=icon
+item_info_build=video.devil.image|face_kiss.png
+item_url_build=http://www.pornoxo.com%s
+########################################################
+# Direct Links
+########################################################
+title=video.devil.locale|30100
+type=once
+icon=video.devil.image|face_kiss.png
+url=http://www.pornoxo.com/channels.php
+########################################################
+# Next
+########################################################
+item_infos="([^"]+)">Next</a>
+item_order=url
+item_skill=space|striptoslash
+item_info_name=title
+item_info_build=video.devil.locale|30103
+item_info_name=icon
+item_info_build=video.devil.image|next.png
+item_url_build=%s
+########################################################
+# Search
+########################################################
+title=video.devil.locale|30102
+type=search
+icon=video.devil.image|search.png
+url=http://www.pornoxo.com/search/%s/page1.html
+########################################################
