@@ -1,6 +1,20 @@
 ﻿########################################################
 # VideoDevil Plugin: Adult sites list
 ########################################################
+title=MadThumbs
+type=rss
+genre=madthumbs
+director=VideoDevil
+icon=video.devil.image|madthumbs.png
+url=madthumbs.com.cfg
+########################################################
+title=PornoXO
+type=rss
+genre=pornoxo
+director=VideoDevil
+icon=video.devil.image|pornoxo.png
+url=pornoxo.com.cfg
+########################################################
 title=RedTube
 type=rss
 genre=RedTube
@@ -22,12 +36,12 @@ director=VideoDevil
 icon=video.devil.image|youjizz.png
 url=youjizz.com.cfg
 ########################################################
-#title=GirlfriendVideos
-#type=rss
-#genre=GirlfriendVideos
-#director=VideoDevil
-#icon=video.devil.image|gfvideos.png
-#url=gfvideos.com.cfg
+title=GirlfriendVideos
+type=rss
+genre=GirlfriendVideos
+director=VideoDevil
+icon=video.devil.image|gfvideos.png
+url=gfvideos.com.cfg
 ########################################################
 title=EPORNER
 type=rss
@@ -71,12 +85,12 @@ url=boysfood.com.cfg
 #icon=video.devil.image|pacoporn.png
 #url=pacoporn.com.cfg
 ########################################################
-#title=Shufuni
-#type=rss
-#genre=Shufuni
-#director=VideoDevil
-#icon=video.devil.image|shufuni.png
-#url=shufuni.com.cfg
+title=Shufuni
+type=rss
+genre=Shufuni
+director=VideoDevil
+icon=video.devil.image|shufuni.png
+url=shufuni.com.cfg
 ########################################################
 title=TimTube
 type=rss
